--- a/Exe/system/modules/rb_gui/config.cfg
+++ b/Exe/system/modules/rb_gui/config.cfg
@@ -1,2 +1,2 @@
-RetroBatIniPath=V:\retrobat.ini
-RetroBatSystemConfigPath=V:\emulationstation\.emulationstation\es_systems.cfg
+RetroBatIniPath=C:\retrobat.ini
+RetroBatSystemConfigPath=C:\emulationstation\.emulationstation\es_systems.cfg
